2007-11-18  Nestor Salceda  <nestor.salceda@gmail.com>

	* ToStringReturnsNullRule.cs: Fixed NullReferenceException when doesn't
	exist the key in the hash table.  Some internal refactoring (fix the
	selection for the ToString () method).

2007-10-24  Nestor Salceda  <nestor.salceda@gmail.com>

	* Gendarme.Rules.BadPractice.xml.in: Put the version attribute with 
	autotools helpers. Added documentation for these rules.

2007-10-19  Nestor Salceda  <nestor.salceda@gmail.com>
	
	* CloneMethodShouldNotReturnNullRule.cs: Fixed NullReferenceException
	when try to inspect a method without body.

2007-10-16  Nestor Salceda  <nestor.salceda@gmail.com>
	
	* ToStringReturnsNullRule.cs: Fixed NullReferenceException when try
	to inspect a method without instructions.

2007-10-07  Sebastien Pouliot  <sebastien@ximian.com>

	* CloneMethodShouldNotReturnNullRule.cs: New rule (Nidhi Rawal, GSoC 
	2007)
	* EqualShouldHandleNullArgRule.cs: New rule (Nidhi Rawal, GSoC 2007)
	* ImplementingEqualsButNotGetHashCodeAndViceVersaRule.cs: New rule
	(Nidhi Rawal, GSoC 2007)
	* ToStringReturnsNullRule.cs: New rule (Nidhi Rawal, GSoC 2007)
	* Gendarme.Rules.BadPractice.mdp: Project file for MonoDevelop.
	* Makefile.am: Build file.